--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "translator",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,8 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^18"
   }
 }
